--- a/package.json
+++ b/package.json
@@ -10,12 +10,10 @@
     "eleventy:watch": "eleventy --watch",
     "styles:prod": "node-sass src/styles/ --output dist/styles/ && postcss ./dist/styles/*.css --replace",
     "styles:dev": "node-sass src/styles/ --output dist/styles/ --source-map true --source-map-contents true && postcss ./dist/styles/*.css --replace",
-    "scripts:prod": "webpack --mode=production",
-    "scripts:dev": "webpack --mode=development",
     "serve": "light-server -c .lightserverrc",
-    "dev": "cross-env NODE_ENV=development npm-run-all clean styles:dev scripts:dev eleventy:default --parallel eleventy:watch serve --print-label",
+    "dev": "cross-env NODE_ENV=development npm-run-all clean styles:dev eleventy:default --parallel eleventy:watch serve --print-label",
     "dev:debug": "DEBUG=* npm run dev",
-    "build": "cross-env NODE_ENV=production run-s clean scripts:prod eleventy:default styles:prod --print-label"
+    "build": "cross-env NODE_ENV=production run-s clean eleventy:default styles:prod --print-label"
   },
   "repository": {
     "type": "git",
@@ -29,20 +27,15 @@
   "homepage": "https://github.com/ianrose/deventy#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.11.0",
-    "@babel/core": "^7.4.4",
-    "@babel/preset-env": "^7.4.4",
     "@fullhuman/postcss-purgecss": "^1.2.0",
     "autoprefixer": "^9.5.1",
-    "babel-loader": "^8.0.6",
     "cross-env": "^5.2.0",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
     "light-server": "^2.6.2",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.1",
-    "tailwindcss": "^1.0.3",
-    "webpack": "^4.31.0",
-    "webpack-cli": "^3.3.12"
+    "tailwindcss": "^1.0.3"
   },
   "dependencies": {
     "acorn": "^6.4.1",
