--- a/package.json
+++ b/package.json
@@ -28,17 +28,18 @@
   "devDependencies": {
     "@11ty/eleventy": "^0.11.1",
     "@fullhuman/postcss-purgecss": "^1.2.0",
-    "autoprefixer": "^9.8.6",
+    "autoprefixer": "^10.1.0",
     "cross-env": "^5.2.0",
     "cssnano": "^4.1.10",
     "cssnano-preset-advanced": "^4.0.7",
     "light-server": "^2.9.1",
     "npm-run-all": "^4.1.5",
     "postcss-cli": "^7.1.2",
-    "tailwindcss": "^1.9.6"
+    "tailwindcss": "^2.0.2"
   },
   "dependencies": {
     "acorn": "^6.4.2",
-    "node-sass": "^4.14.1"
+    "node-sass": "^4.14.1",
+    "postcss": "^8.2.1"
   }
 }
