--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "homepage": "https://github.com/ianrose/deventy#readme",
   "devDependencies": {
     "@11ty/eleventy": "^0.12.1",
+    "@11ty/eleventy-navigation": "^0.3.2",
     "@fullhuman/postcss-purgecss": "^3.1.3",
     "autoprefixer": "^10.2.6",
     "cross-env": "^7.0.3",
